# SHU-CES-Course-Files

./: .gitignore  README.md
人工智能/: 22冬试卷---课程报告.docx
信号处理/习题、例题/: Practice1_Signal system and convolution.pptx  Practice2_Fourier Series and Fourier Transform.pptx  Practice3_Discrete Time Fourier and Sampling.pptx
多媒体技术/: 多媒体复习大纲2021.doc  多媒体复习大纲202302.doc  多媒体技术教学大纲.doc
实用计算机英语/: 2021-2022学期春季学期《实用计算机英语》A卷.doc  词汇表.xls
接口技术/: 实验报告格式.doc  接口技术-教学大纲.docx  第 1 章 微型计算机系统.pptx  第 2 章 处理器结构.pptx  第 5 章 微机总线.pptx  第 6 章 存储系统.pptx  第 7 章 输入输出接口.pptx  第 8 章 常用接口技术.pptx  第 9 章 处理器性能提高技术.pptx
数字图像处理/: 课后习题new.doc
数据挖掘/: Lecture3.1_分类.pptx  Lecture3.2_过拟合.pptx  Lecture4_分类：其他技术.pptx  Lecture5_关联规则.pptx  Lecture6_聚类.pptx  Lecture7_课程总结.pptx  关联+聚类_随堂测验.docx  分类_随堂测验.docx  数据_随堂测验.docx
数据科学的数学基础/: 数据科学基础大纲.doc
智能系统控制/: 2021智能控制系统 练习题（无答案）.docx  智能控制知识点.docx  智能系统控制 练习题.docx  模糊控制 - 考试题讲解(2).pptx
智能计算系统/: README.md  教学大纲-智能计算系统.docx
汇编语言程序设计/: 汇编语言上机指导.ppt  汇编语言程序设计-实验内容1-5.doc  课堂练习二.ppt
程序设计方法学/: 2021-2022学年冬季学期《程序设计方法学》期末考试.doc
编码理论/: 纠错编码原理及MATLAB实现习题解答.doc
编译原理/: 《编译原理》课程实验报告撰写提纲(2020).doc
计算机科学进展/: AdaBoost-稿子.docx  RISC-V 稿子.docx
计算机程序设计实训/: Sorts-New Algorithm.rar  Sorts_Old.rar
计算机系统结构/实验/Exp2/OpenMP/: CMakeLists.txt  Matrix.c  Matrix_Linux.c  PI.c  helloworld.c
计算机系统结构/实验/Exp2/OpenMP/Image Generate/: main.py
计算机组成原理/: ~$组大作业报告.docx
软件测试/: 复习.ppt  研讨1.docx  研讨2.doc  第1讲+基于模型的测试简介.ppt  第2讲+图覆盖.ppt  第3讲+基于状态的测试.ppt  第4讲+基于逻辑表达式的测试.ppt  第5讲+输入域测试-蜕变测试-静态测试.pptx  第6讲+集成测试、系统测试、回归测试.ppt  第8讲+模型检测.ppt
高级语言程序设计/: 参考程序.rar  测试数据.rar
(+254 files in other folders)
